--- a/index-ar.html
+++ b/index-ar.html
@@ -51,7 +51,8 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu"
                             data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item menu-item-home current-menu-item"><a href="index-ar.html">الرئيسية</a>
+                                <li class="menu-item menu-item-home current-menu-item"><a
+                                        href="index-ar.html">الرئيسية</a>
 
                                 </li>
                                 <li class="menu-item "><a href="about-us-ar.html">من نحن</a>
@@ -212,10 +213,12 @@
                                                             data-textAlign="['inherit','inherit','inherit','inherit']"
                                                             data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]"
                                                             data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]">
-                                                            يُعد معهـد رافــلــز معهداً متخصـصــاً في التصميم مقره في الريــاض،
+                                                            يُعد معهـد رافــلــز معهداً متخصـصــاً في التصميم مقره في
+                                                            الريــاض،
                                                             المملكة العربية السعودية، وهو معهد ناشئ عن الشراكة بين جامعة
                                                             رافلز العالمية وشركة التمكين.
-                                                            يُصنف معهد رافــلــز للتصميم من بين أفضل 40 مدرسة للتصميـم في
+                                                            يُصنف معهد رافــلــز للتصميم من بين أفضل 40 مدرسة للتصميـم
+                                                            في
                                                             العالم، حيث يُقدم معهد رافلز للتصميم برامج متقدمة معترف بها
                                                             دولياً في البكالوريوس والدبلوم العالي، تم تصميم مناهجنــا
                                                             بإتقان لتمكين طالبــاتـنـا من الابتكار، كما نقدم لهم دورات
@@ -502,8 +505,10 @@
                                                         <p class="txtmob1 aos-init aos-animate ar-float ar-space"
                                                             data-aos="fade-right" data-aos-duration="500">يعتبر <b>معهد
                                                                 رافـلـز التعليمي</b> الذي تأسس
-                                                            عام 2014 واحد من سـلـسـلـة فــروع رافـلـز الثلاثيــن التابعــة لجامعة
-                                                            رافلز التي تأسست عام 1990 في سنغـافـورة، وهــي واحـدة من أوائل
+                                                            عام 2014 واحد من سـلـسـلـة فــروع رافـلـز الثلاثيــن
+                                                            التابعــة لجامعة
+                                                            رافلز التي تأسست عام 1990 في سنغـافـورة، وهــي واحـدة من
+                                                            أوائل
                                                             المؤسسات الخاصـة التي تقدم دورات في تصميم الأزيــاء</p>
                                                     </div>
                                                     <div class="gdlr-core-text-box-item-content"
@@ -512,17 +517,21 @@
                                                             data-aos="fade-right" data-aos-duration="500"
                                                             data-aos-delay="100">
                                                             في خلال 5 سنوات، تم تقديم تخصصات متعددة بجامعة رافلز بما في
-                                                            ذلك ( التصمـيـم الجـرافيكــي - تصميم المنتجــات - تصميم المجوهــرات -
-                                                            التصميم الداخلــي - تصميم الألعــاب - تصميم الرســوم المتحركــة )
+                                                            ذلك ( التصمـيـم الجـرافيكــي - تصميم المنتجــات - تصميم
+                                                            المجوهــرات -
+                                                            التصميم الداخلــي - تصميم الألعــاب - تصميم الرســوم
+                                                            المتحركــة )
                                                         </p>
                                                     </div>
                                                     <div class="gdlr-core-text-box-item-content"
                                                         style="font-size: 18px ;font-weight: 400 ;text-transform: none ;color: black ;">
-                                                        <p class="txtmob1 aos-init ar-float ar-space" data-aos="fade-right"
-                                                            data-aos-duration="500" data-aos-delay="200">
+                                                        <p class="txtmob1 aos-init ar-float ar-space"
+                                                            data-aos="fade-right" data-aos-duration="500"
+                                                            data-aos-delay="200">
                                                             في عام 2004، حصلت <b>جامعة رافلز</b> للتصميم على جائزة
                                                             سنغافورة
-                                                            للجودة لمنظمات التعليم الخـاص. وفي عام 2005، حصلـت على جائــزة
+                                                            للجودة لمنظمات التعليم الخـاص. وفي عام 2005، حصلـت على
+                                                            جائــزة
                                                             CaseTrust للتعليم. وفي عام 2008، اعترفت شركة Edupoll بجامعة
                                                             رافلز للتصميم باعتبارها أحد أفضل عشر مؤسسات تعليمية في
                                                             سنغافورة وأكبر مقدم تعليم خاص عـالـمـيــاً
