--- a/about-us-ar.html
+++ b/about-us-ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl" class="no-js">
+<html lang="ar" class="no-js">
 
 <head>
     <meta charset="UTF-8">
@@ -78,11 +78,6 @@
                             <a href="tel:+966552995509">+966 55 299 5509</a>
                         </div>
                         <div class="kingster-top-bar-right kingster-item-pdlr">
-                            <!-- <ul id="kingster-top-bar-menu"
-                                        class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
-                                        <li class="menu-item kingster-normal-menu"><a href="#">Life In Riyadh</a></li>
-                                        <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
-                                    </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
                             <a class="kingster-top-bar-right-button" href="lifeinriyadh-ar.html">الحياة في الرياض</a>
                             <a class="kingster-top-bar-right-button " href="collaboration-ar.html">Collaboration</a>
@@ -204,7 +199,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption   tp-resizeme title2"
+                                                            <div class="tp-caption abtus-ar tp-resizeme title2"
                                                                 id="slide-6-layer-3" data-x="500" data-y="center"
                                                                 data-voffset="-15" data-width="['auto']"
                                                                 data-height="['auto']" data-type="text"
@@ -214,9 +209,9 @@
                                                                 data-paddingtop="[0,0,0,0]"
                                                                 data-paddingright="[0,0,0,0]"
                                                                 data-paddingbottom="[0,0,0,0]"
-                                                                data-paddingleft="[0,0,0,0]"
-                                                                style=" z-index: 8; white-space: nowrap; font-size: 50px; line-height: 50px; font-weight: 500; color: rgb(255, 255, 255); letter-spacing: 0px; font-family: Poppins;visibility: inherit; transition: none 0s ease 0s; text-align: inherit; border-width: 0px; margin: 0px; padding: 0px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">
-                                                                من نحن</div>
+                                                                data-paddingleft="[0,0,0,0]">
+                                                                مــن نــحــن
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -225,7 +220,7 @@
                                                     <div class="tp-loop-wrap" style="position:absolute;display:block;;">
                                                         <div class="tp-mask-wrap"
                                                             style="position: absolute; display: block; overflow: visible;">
-                                                            <div class="tp-caption   tp-resizeme title2b"
+                                                            <div class="tp-caption abtus-ar2 tp-resizeme title2b"
                                                                 id="slide-6-layer-9" data-x="538" data-y="400"
                                                                 data-voffset="129" data-width="['746']"
                                                                 data-height="['auto']" data-type="text"
@@ -235,8 +230,7 @@
                                                                 data-paddingtop="[0,0,0,0]"
                                                                 data-paddingright="[0,0,0,0]"
                                                                 data-paddingbottom="[0,0,0,0]"
-                                                                data-paddingleft="[0,0,0,0]"
-                                                                style="z-index: 9; min-width: 746px; max-width: 746px; white-space: normal; font-size: 32px; line-height: 38px; font-weight: 300; color: rgb(255, 255, 255); letter-spacing: 0px; font-family: poppins; visibility: inherit; transition: none 0s ease 0s; text-align: inherit; border-width: 0px; margin: 0px; padding: 0px; min-height: 0px; max-height: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;top: -45px;">
+                                                                data-paddingleft="[0,0,0,0]">
                                                                 صمم مستقبلك
                                                             </div>
                                                         </div>
@@ -619,10 +613,13 @@
                                                             <p class="ar-float ar-space">من خلال إيقاظ إحساس رافلز
                                                                 لديهم، فإننا
                                                                 نشجع إبــداعهــم
-                                                                وابتكــارهــم لتمكيــنهــم مــن السـعــي نحو تحقيق الذات الذي سيدفعهم
-                                                                إلى فتح آفــاق جديدة وتنمية مواهبهم وتغـذيــة الشغــف الــلازم
+                                                                وابتكــارهــم لتمكيــنهــم مــن السـعــي نحو تحقيق الذات
+                                                                الذي سيدفعهم
+                                                                إلى فتح آفــاق جديدة وتنمية مواهبهم وتغـذيــة الشغــف
+                                                                الــلازم
                                                                 لنجاحهم المهني مدى الحياة</p>
-                                                            <p class="ar-float ar-space">نتحدى طالبــاتــنــا لاكتشاف أنفسهم
+                                                            <p class="ar-float ar-space">نتحدى طالبــاتــنــا لاكتشاف
+                                                                أنفسهم
                                                                 لكي يصبحوا
                                                                 مــبــدعــات وقــــائــدات الـــغـــد
                                                             </p>
